--- a/resources/templates/service-config.html
+++ b/resources/templates/service-config.html
@@ -51,7 +51,9 @@
                     {% else %}
                     <div class="py-3 border-top">
                         <h5 class="text-secondary">OpenAPI config</h5>
-                        <div class="form-text">To enable it mark service with "{{openapi-label}}" label.</div>
+                        <div class="form-text">
+                            To enable OpenAPI docu mark service with "{{openapi-label}}" label.
+                        </div>
                     </div>
                     {% endif %}
 
@@ -91,7 +93,9 @@
                     {% else %}
                     <div class="py-3 border-top">
                         <h5 class="text-secondary">AsyncAPI config</h5>
-                        <div class="form-text">To enable it mark service with "{{asyncapi-label}}" label.</div>
+                        <div class="form-text">
+                            To enable AsyncAPI docu mark service with "{{asyncapi-label}}" label.
+                        </div>
                     </div>
                     {% endif %}
                     <div class="py-3 border-top">
