asyncdou indexing button

--- a/resources/templates/beholder-config.html
+++ b/resources/templates/beholder-config.html
@@ -44,7 +44,8 @@
                         <input type="text" class="form-control" name="asyncApiLabel" id="asyncApiLabel"
                                aria-describedby="asyncApiLabelHelp" value="{{data.asyncApiLabel}}">
                         <div id="asyncApiLabelHelp" class="form-text">Marker label identifying service as exposing
-                            <a href="https://www.asyncapi.com/docs/reference/specification/v2.0.0" target="_blank">AsyncAPI doc</a>.
+                            <a href="https://www.asyncapi.com/docs/reference/specification/v2.0.0" target="_blank">AsyncAPI
+                                doc</a>.
                             When empty "asyncapi" will be used.
                         </div>
                     </div>
