--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="/static/img/logo.png" alt="" height="24" class="d-inline-block align-text-top me-1">
-            Beholder
+            𝕭𝖊𝖍𝖔𝖑𝖉𝖊𝖗
         </a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav" style="width:100%">
