--- a/resources/templates/dashboard.html
+++ b/resources/templates/dashboard.html
@@ -32,7 +32,7 @@
 
 
                     {% if service.asyncApiEnabled? %}
-                    {% if service.openApiCached? %}
+                    {% if service.config.asyncApiCached? %}
                     <a href="/service/{{service.serviceId}}/doc/asyncapi" class="btn btn-success">ASYNC doc</a>
                     {% else %}
                     <button class="btn btn-outline-secondary"
