--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/beholder.css">
-    <link rel="stylesheet" type="text/css" href="/static/swagger/swagger-ui.css">
+    {% block css %}
+    {% endblock %}
 
 </head>
-<body>
+<body >
 <nav class="navbar navbar-expand-lg bg-light shadow-sm mb-0">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img src="/static/img/logo.png" alt="" height="24" class="d-inline-block align-text-top me-1">
-            𝕭𝖊𝖍𝖔𝖑𝖉𝖊𝖗
+            Beholder
         </a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav" style="width:100%">
@@ -39,4 +39,7 @@ var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
   return new bootstrap.Tooltip(tooltipTriggerEl)
 })
 </script>
+
+{% block js %}
+{% endblock %}
 </body>
